menambah score mingguan

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -525,5 +525,25 @@ Loyalitas & 3 \\
 \label{table:scoremingguan}
 \end{table}
 
-
-
+\section{Score Mingguan dari tanggal 04/03/2019 sampai 08/03/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan}
+\end{table}
