update buku harian

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -77,7 +77,7 @@ No&Tanggal&Kegiatan\\
 		&&pull request di PPK\#9 \\
 &&PRODUKTIF :Diskusi repository untuk internship 2 dan TA\\
 		     &&Masuk kelas pemrograman III 2B\\
-&&INTEGRITAS : Able to marge atau has no conflict\\
+&&INTEGRITAS : Able to merge atau has no conflict\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:30\\
 &&LOYALITAS :Merapihkan dan membersihkan tempat di IRC\\
 \hline
@@ -85,23 +85,64 @@ No&Tanggal&Kegiatan\\
 &DEDIKASI :Pull request GIS2019\#19\\
 &&PRODUKTIF :menilai hasil pull request Pemrograman III 2B\\
 		     &&Masuk kelas kecerdasan buatan III 3C\\
-&&INTEGRITAS : Able to marge atau has no conflict\\
+&&INTEGRITAS : Able to merge atau has no conflict\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:00\\
 &&LOYALITAS :Cuci gelas minum sendiri dan membersihkan tempat di IRC\\
 \hline
 3.&\multirow{2}{*}{06-03-2019}
 &DEDIKASI :-\\
 &&PRODUKTIF :menilai hasil pull request kelas 3C\\
-&&INTEGRITAS : Able to marge atau has no conflict\\
+&&INTEGRITAS : Able to merge atau has no conflict\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 16:00\\
 &&LOYALITAS :membersihkan tempat ruangan tanggung jawab di IRC\\
 \hline
 4.&\multirow{2}{*}{08-03-2019}
 &DEDIKASI :Pull request GIS2019\#22\\
 &&PRODUKTIF :diskusi untuk membuat github ke gitlab\\
-&&INTEGRITAS : Able to marge atau has no conflict\\
+&&INTEGRITAS : Able to merge atau has no conflict\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 15:10\\
 &&LOYALITAS :membersihkan tempat di IRC\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
+\end{table}
+
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian minggu ke3 IRC}
+\centering
+\begin{tabular}{|c|c|l|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{011-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :masuk kelas 2C\\
+		     &&menialai kelas 2B\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 9.30 Jam Pulang 16:00\\
+&&LOYALITAS :Merapihkan kan tempat tanggung jawab\\
 \hline
 \end{tabular}
 \label{table:contoh}
