--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -163,6 +163,24 @@
 \end{tabular}
 \end{table}
 
+\subsection{Laporan Harian Pekan ke-3}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 11 Maret 2019}
+\label{tab:lh110319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  \\ \hline
+2 & Produktifitas & a. Mengkoordinasi pengiriman Buku GIS oleh Lusia, Rahmi, dan Tomy.\\
+ &  & b. Menilai lembar jawaban kuis kelas 2A di Spyder. \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.51 WIB \\
+ &  & Jam Pulang : 16.00 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
 \section{Penilaian Mingguan}
 
 \subsection{Penilaian Mingguan Pekan ke-1}
@@ -187,7 +205,7 @@
 
 \begin{table}[htp]
 \centering
-\caption{Nilai Minggu ke-2 (Update 6/3/2019)}
+\caption{Nilai Minggu ke-2}
 \label{tab:nm02}
 \begin{tabular}{|c|c|c|p{\textwidth}|}
 \hline
@@ -200,6 +218,25 @@
  & \textbf{Total Poin} & 14 \\ \hline
 \end{tabular}
 \end{table}
+
+\subsection{Penilaian Mingguan Pekan ke-2}
+
+\begin{table}[htp]
+\centering
+\caption{Nilai Minggu ke-3 (Update 11/3/2019)}
+\label{tab:nm02}
+\begin{tabular}{|c|c|c|p{\textwidth}|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1. & Dedikasi & 1 \\ \hline
+2. & Produktifitas & 1 \\ \hline
+3. & Integritas & 1 \\ \hline
+4. & Disiplin & 1 \\ \hline
+5. & Loyalitas & 1 \\ \hline
+ & \textbf{Total Poin} & 5 \\ \hline
+\end{tabular}
+\end{table}
+
 
 %\begin{table}
 %\begin{center}
