menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -500,6 +500,53 @@
 \item Menyapu dan membersihkan area sidang IRC
 \item Membersihkan meja pribadi
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 11/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis dan menginput chapter tipe tipe data geospasial \#23
+\item Masuk kelas Pemrograman III
+\item Memeriksa Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Menginput nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Menyapu area sidang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis dan menginput chapter tipe tipe data geospasial \#23
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis dan menginput chapter tipe tipe data geospasial \#23
+\item Masuk kelas Pemrograman III
+\item Memeriksa Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Menginput nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Menyapu area sidang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.35
+\item Jam Keluar : 16.20
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
 \end{enumerate}
 
 \section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
