--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -48,3 +48,17 @@ no & kategori    & keterangan                                                   
 \end{tabular}
 \label{table:contoh}
 \end{table} 
+
+\begin{table}[]
+\caption{Tabel Kegiatan Harian 06 -03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                \\ \hline
+1  & dedikasi    & -                                                               \\ \hline
+2  & produktif   & Masuk Kelas adminjar                          \\ \hline
+3  & intergritas & able to merge                                                             \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:15\\ pulang jam:5:18\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi dan sapu                                                         \\ \hline
+\end{tabular}
+\label{table:contoh}
+\end{table} 
