update laporan harian

--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -33,4 +33,32 @@ no & kategori    & keterangan                                                   
 5  & loyalitas   & merapihkan kursi                                                          \\ \hline
 \end{tabular}
 \label{table:contoh}
-\end{table}
+\end{table} 
+
+\begin{table}[]
+\caption{Tabel Kegiatan Harian 05-03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                \\ \hline
+1  & dedikasi    & -                                                               \\ \hline
+2  & produktif   & Masuk Kelas 3c untuk mengulang mata kuliah data mining                          \\ \hline
+3  & intergritas & able to merge                                                             \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:15\\ pulang jam:5:18\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                          \\ \hline
+\end{tabular}
+\label{table:contoh}
+\end{table} 
+
+\begin{table}[]
+\caption{Tabel Kegiatan Harian 06 -03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                \\ \hline
+1  & dedikasi    & -                                                               \\ \hline
+2  & produktif   & Masuk Kelas adminjar                          \\ \hline
+3  & intergritas & able to merge                                                             \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:15\\ pulang jam:5:18\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi dan sapu                                                         \\ \hline
+\end{tabular}
+\label{table:contoh}
+\end{table} 
