menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -547,6 +547,62 @@
 \item Menyapu dan membersihkan area sidang IRC
 \item Membersihkan meja pribadi
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 12/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#24
+\item Memerge tugas chapter 3 mata kuliah Pemrograman III kelas 2b pada hari senin malam hingga hari selasa pagi jam 04.00
+\item Memeriksa ulang nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Merubah nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Memeriksa Tugas Mata Kuliah pemrograman III kelas 2b
+\item Merangkum materi \#26 GIS2019
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#24
+\item Merangkum materi \#26 GIS2019
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#24
+\item Memerge tugas chapter 3 mata kuliah Pemrograman III kelas 2b pada hari senin malam hingga hari selasa pagi jam 04.00
+\item Memeriksa ulang nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Merubah nilai Quiz I Mata Kuliah Pemrograman III kelas 2b (Irvan Rizkiansyah 1174043, Fathi Rabbani 1164074, Yusniar Nur Syarif Sidiq 1164089, Muhammad Afra Faris 1174041, Salwa Tania 1174047, Teddy Gidean Manik 1174038, Rangga Putra Ramadhan 1174056)
+\item Memeriksa Tugas Mata Kuliah Pemrograman III kelas 2b
+\item Merangkum materi \#26 GIS2019
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.35
+\item Jam Keluar : 16.30
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\end{enumerate}
 \end{enumerate}
 
 \section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
