--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -50,15 +50,17 @@ No&Tanggal&Kegiatan\\
 \hline
 Kategori& Sekor Nilai Kategori mingguan\\
 \hline
-Dedikasi & -\\
+Dedikasi & 1\\
 \hline
-Produktif & -\\
+Produktif & 3\\
 \hline
-Integritas & -\\
+Integritas & 3\\
 \hline
-Disiplin & -\\
+Disiplin & 3\\
 \hline
-Loyalitas & -\\
+Loyalitas & 3\\
+\hline
+jumalah & 13\\
 \hline
 \end{tabular}
 \end{center}
@@ -143,6 +145,13 @@ No&Tanggal&Kegiatan\\
 &&INTEGRITAS :able to merge\\
 &&DISIPLIN : Jam Datang 9.30 Jam Pulang 16:00\\
 &&LOYALITAS :Merapihkan kan tempat tanggung jawab\\
+\hline
+2.&\multirow{2}{*}{012-03-2019}
+&DEDIKASI :Pulrequest gis2019\#25 \\
+&&PRODUKTIF :menilai adik kelas 2b\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 08:49 Jam Pulang 16:58\\
+&&LOYALITAS :mencuci gelas dan merapaihkan tempat intership\\
 \hline
 \end{tabular}
 \label{table:contoh}
