--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@ The Degree of Applied Bachelor of Informatics Engineering}  %your college
 \include{section/chapter5}
 \include{section/chapter6}
 \include{section/chapter7}
+\include{section/chapter8}
 
 
 %now enable appendix numbering format and include any appendices
