--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -181,6 +181,38 @@
 \end{tabular}
 \end{table}
 
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 12 Maret 2019}
+\label{tab:lh120319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  BukuInformatika/flask \#19 \\ \hline
+2 & Produktifitas & a. Mengkoordinasi pengiriman Buku GIS oleh Lusia, Rahmi, dan Tomy.\\
+ &  & b. Mengconvert jurnal IEEE Smart Fish Feeder dari word ke LaTex \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 16.20 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Membersihkan dan merapihkan meja, mencuci gelas-gelas,\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 13 Maret 2019}
+\label{tab:lh130319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  BukuInformatika/flask \#21 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mempelajari Python dari CS Dojo\\ Python Tutorials for Absolute Beginners by CS Dojo. \end{tabular} \\
+ &  & b.  \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.49 WIB \\
+ &  & Jam Pulang :  \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci gelas\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
 \section{Penilaian Mingguan}
 
 \subsection{Penilaian Mingguan Pekan ke-1}
@@ -219,7 +251,7 @@
 \end{tabular}
 \end{table}
 
-\subsection{Penilaian Mingguan Pekan ke-2}
+\subsection{Penilaian Mingguan Pekan ke-3}
 
 \begin{table}[htp]
 \centering
