update laporan harian

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -117,4 +117,46 @@ No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
 \label{tabelharian8}
 \end{table}
 
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 06-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#17 \\ \hline
+2  & Produktif                     &  \begin{tabular}[c]{@{}l@{}}Melakukan penilaian tugas hari ke-1 pekan ke-1 kecerdasan buatan\\ atas nama Annisa F, Annisa C, dan Tasya di kelas 3C.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.00 \\ Pulang jam : 16.30 \end{tabular} \\ \hline
+5  & Loyalitas                     & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+\end{tabular}
+\label{tabelharian9}
+\end{table}
 
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 08-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      &  - \\ \hline
+2  & Produktif                     &  - \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.00 \\ Pulang jam : 15.45 \end{tabular} \\ \hline
+5  & Loyalitas                     & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+\end{tabular}
+\label{tabelharian10}
+\end{table}
+
+
+\begin{table}[]
+\caption{Laporan Minggu Ke-2}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
+1  & Dedikasi                      &                          \\ \hline
+2  & Produktifitas                 &                          \\ \hline
+3  & Integritas                    &                          \\ \hline
+4  & Disiplin                      &                          \\ \hline
+5  & Loyalitas                     &                          \\ \hline
+\multicolumn{2}{|l|}{Total}        &                         \\ \hline
+\end{tabular}
+\label{tabelharian11}
+\end{table} 
