menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,4 +1,4 @@
-\chapter{Dzikri Ahmad Ghifari}
+\chapter{Dzikri Ahmad Ghifari/1144077}
 \begin{enumerate}
 \item \textbf{Tugas Harian tanggal 17/01/2019}
 \begin{enumerate}
@@ -499,6 +499,7 @@
 \item Merapihkan kursi setelah pulamg dari IRC
 \item Menyapu dan membersihkan area sidang IRC
 \item Membersihkan meja pribadi
+\item Mencuci gelas
 \end{enumerate}
 
 \item \textbf{Tugas Harian tanggal 11/03/2019}
@@ -602,11 +603,54 @@
 \item Menyapu dan membersihkan area sidang IRC
 \item Membersihkan meja pribadi
 \item Membersihkan area belakang IRC
+\item Mencuci gelas
+\end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 13/03/2019}
+\begin{enumerate}
+\item Merangkum materi \#27
+\item Memeriksa tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\item Menginput nilai tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Merangkum materi \#27
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Merangkum materi \#27
+\item Memeriksa tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\item Menginput nilai tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.35
+\item Jam Keluar : 16.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas
 \end{enumerate}
 \end{enumerate}
 
 \section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
-Total score mingguan adalah 15 keterangan seperti pada Tabel \ref{table:scoremingguan}.
+Total score mingguan adalah 15, keterangan seperti pada Tabel \ref{table:scoremingguan}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
