--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -18,3 +18,21 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\subsection{Laporan Harian Pekan ke-2}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 13 Maret 2019}
+\label{tab:lh130319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project Jaringan saraf convolutional canggih pada udemy. \\
+  & & b.Mempelajari materi Udemy. \\ \hine
+3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
+4 & Disiplin & Jam Datang : 09:00 WIB \\
+ &  & Jam Pulang : 16.30 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
