upadte buku harian

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -153,6 +153,14 @@ No&Tanggal&Kegiatan\\
 &&DISIPLIN : Jam Datang 08:49 Jam Pulang 16:58\\
 &&LOYALITAS :mencuci gelas dan merapaihkan tempat intership\\
 \hline
+3.&\multirow{2}{*}{013-03-2019}
+&DEDIKASI :Pulrequest gis2019\#28 \\
+&&PRODUKTIF :menilai adik kelas 2b Fathi rabbani 1164074, Dika sukma Pradana 1174050\\
+&&Ichsan Hizman Hardy 1174034\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 08:59 Jam Pulang 17:10\\
+&&LOYALITAS : merapaihkan tempat intership\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
