update laporan 13 maret 2019

--- a/main.tex
+++ b/main.tex
@@ -56,8 +56,8 @@ The Degree of Applied Bachelor of Informatics Engineering}  %your college
 \include{section/chapter4}
 \include{section/chapter5}
 \include{section/chapter6}
-%\include{section/chapter7}
-%\include{section/chapter8}
+\include{section/chapter7}
+\include{section/chapter8}
 \include{section/chapter9}
 
 %now enable appendix numbering format and include any appendices
