--- a/section/chapter7.tex
+++ b/section/chapter7.tex
@@ -5,16 +5,31 @@
 \subsection{Laporan Harian Pekan ke-1}
 
 \begin{table}[htp]
-\caption{Laporan Harian Tanggal 25 Februari 2018}
-\label{tab:lh250219}
+\caption{Laporan Harian Tanggal 12 Maret 2019}
+\label{tab:lh120319}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & - \\ \hline
-2 & Produktifitas & install miktek dengan git bash \\
+2 & Produktifitas & bekerja dengan git bash \\
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 09.00 WIB \\
  &  & Jam Pulang : 16.00 WIB \\ \hline
-5 & Loyalitas & Membersihkan dan merapihkan meja kerja \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 13 Maret 2019}
+\label{tab:lh130319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  - \\ \hline
+2 & Produktifitas & mengupdate buku informatika \\
+3 & Integritas & conflict \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 16.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
