--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -28,8 +28,8 @@
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & - \\ \hline
-2 & Produktifitas & a.Mengerjakan project Jaringan saraf convolutional canggih pada udemy. \\
-  & & b.Mempelajari materi Udemy. \\ \hine
+2 & Produktifitas & a.Mengerjakan project Jaringan saraf convolutional canggih pada udemy \\
+  & & b.Mempelajari materi Udemy \\ \hline
 3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
 4 & Disiplin & Jam Datang : 09:00 WIB \\
  &  & Jam Pulang : 16.30 WIB \\ \hline
