--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -612,6 +612,9 @@
 \item Merangkum materi \#27
 \item Memeriksa tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
 \item Menginput nilai tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
 \end{enumerate}
 
 \textbf{Dedikasi}
@@ -624,6 +627,9 @@
 \item Merangkum materi \#27
 \item Memeriksa tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
 \item Menginput nilai tugas chapter 3 kelas 2b (IrvanRizkiansyah1174043, Luthfi Muhammad Nabil 1174035, Rangga Putra Ramdhan 1174056, Faisal Najib Abdullah 1174042, Mhd Zulfikar Akram Nasution 1164081)
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
 \end{enumerate}
 
 \textbf{Integritas}
@@ -635,6 +641,57 @@
 \begin{enumerate}
 \item Jam Masuk : 08.35
 \item Jam Keluar : 16.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 14/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#30
+\item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
+\item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan 
+\item Melakukan latihan dasar menggunakan gitlab
+\item Memberikan arahan kepada Tommy dan Yoshi mengenai tugas di github bukuinformatika, dasar dasar latex dan perintah perintah dasar pada gitbash 
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#30
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#30
+\item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
+\item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan 
+\item Melakukan latihan dasar menggunakan gitlab
+\item Memberikan arahan kepada Tommy dan Yoshi mengenai tugas di github bukuinformatika, dasar dasar latex dan perintah perintah pada gitbash 
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.35
+\item Jam Keluar : 16.40
 \end{enumerate}
 
 \textbf{Loyalitas}
