Update tugas harian-3

--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -36,3 +36,23 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
 \end{tabular}
 \end{table}
+
+
+\subsection{Laporan Harian Pekan ke-3}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 14 Maret 2019}
+\label{tab:lh140319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project Jaringan saraf convolutional canggih pada udemy \\
+   & & b.Mempelajari tutorial Gitlab \\ \hline
+   & & c.Mempelajari jurnal \\ \hline
+3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
+4 & Disiplin & Jam Datang : 09:00 WIB \\
+   &  & Jam Pulang : 16.15 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
