update kamis dan jumat

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -155,7 +155,7 @@
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/flask \#18 \\ \hline
 2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Menerima keluhan untuk penlaian Kecerdasan Buatan.\end{tabular} \\
- &  & \begin{tabular}[c]{@{}l@{}}b. Memngkoordinir mahasiswa untuk tugas kontribusi buku GIS\\oleh Rahmi, Lusia, dan Tomy.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Mengkoordinir mahasiswa untuk tugas kontribusi buku GIS\\oleh Rahmi, Lusia, dan Tomy.\end{tabular} \\
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 08.50 WIB \\
  &  & Jam Pulang : 15.45 WIB \\ \hline
@@ -205,11 +205,44 @@
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi &  BukuInformatika/flask \#21 \\ \hline
 2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mempelajari Python dari CS Dojo\\ Python Tutorials for Absolute Beginners by CS Dojo. \end{tabular} \\
- &  & b.  \\ \hline
+ &  & b. Membuat rekap nilai Kecerdasan Buatan kelas 3C di google docs.\\ \hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 08.49 WIB \\
- &  & Jam Pulang :  \\ \hline
-5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci gelas\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+ &  & Jam Pulang : 16.20 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci gelas-gelas,\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 14 Maret 2019}
+\label{tab:lh140319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mempelajari Python dari CS Dojo\\Python Tutorials for Absolute Beginners by CS Dojo. \end{tabular} \\
+ &  & b. Diskusi dan simulasi penggunaan gitlab pada sisi dosen dan mahasiswa.\\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.49 WIB \\
+ &  & Jam Pulang : 16.20 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Membersihkan dan merapihkan meja,\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 15 Maret 2019}
+\label{tab:lh150319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  BukuInformatika/flask \#23 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Pra Test Toefl : Doli, Tommi, dan Yoshi. \end{tabular} \\
+ &  & b. Belajar Toefl - Sctucture Skill di Youtube \\ \hline
+ &  & c. Mencari Jurnal Internasional terkait Judul Internship II dan TA. \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.05 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci gelas-gelas,\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
 \end{tabular}
 \end{table}
 
@@ -261,11 +294,11 @@
 \hline
 \textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
 1. & Dedikasi & 1 \\ \hline
-2. & Produktifitas & 1 \\ \hline
-3. & Integritas & 1 \\ \hline
-4. & Disiplin & 1 \\ \hline
-5. & Loyalitas & 1 \\ \hline
- & \textbf{Total Poin} & 5 \\ \hline
+2. & Produktifitas & 3 \\ \hline
+3. & Integritas & 3 \\ \hline
+4. & Disiplin & 3 \\ \hline
+5. & Loyalitas & 3 \\ \hline
+ & \textbf{Total Poin} & 13 \\ \hline
 \end{tabular}
 \end{table}
 
