menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -660,6 +660,7 @@
 \item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
 \item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan 
 \item Melakukan latihan dasar menggunakan gitlab
+\item Memeriksa jurnal IMPLEMENTASAI BOOYER MOORE PADA APLIKASI PENCARIAN DAN PENGUMUMAN BARANG HILANG (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
 \item Memberikan arahan kepada Tommy dan Yoshi mengenai tugas di github bukuinformatika, dasar dasar latex dan perintah perintah dasar pada gitbash 
 \item Menyapu area sidang IRC
 \item Membersihkan meja pribadi dan area belakang IRC
@@ -677,6 +678,7 @@
 \item Diskusi mengenai barang barang yang akan ditambahkan ke IRC
 \item Masuk ke kelas 3c Mata Kuliah Kecerdasan Buatan 
 \item Melakukan latihan dasar menggunakan gitlab
+\item Memeriksa jurnal IMPLEMENTASAI BOOYER MOORE PADA APLIKASI PENCARIAN DAN PENGUMUMAN BARANG HILANG (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
 \item Memberikan arahan kepada Tommy dan Yoshi mengenai tugas di github bukuinformatika, dasar dasar latex dan perintah perintah pada gitbash 
 \item Menyapu area sidang IRC
 \item Membersihkan meja pribadi dan area belakang IRC
