--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -161,6 +161,20 @@ No&Tanggal&Kegiatan\\
 &&DISIPLIN : Jam Datang 08:59 Jam Pulang 17:10\\
 &&LOYALITAS : merapaihkan tempat intership\\
 \hline
+4.&\multirow{2}{*}{014-03-2019}
+&DEDIKASI :Pulrequest gis2019\#33 \\
+&&PRODUKTIF :masuk kelas 3C,diskusi gitlab\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 09:30 Jam Pulang 16:10\\
+&&LOYALITAS : merapaihkan tempat intership\\
+\hline
+5.&\multirow{2}{*}{015-03-2019}
+&DEDIKASI : \\
+&&PRODUKTIF :belajar toefel\\
+&&INTEGRITAS :able to merge\\
+&&DISIPLIN : Jam Datang 09:40 Jam Pulang 15:58\\
+&&LOYALITAS : merapaihkan tempat intership\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
