update laporan harian

--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -2,7 +2,7 @@
 
 \section{Laporan Harian}
 
-\subsection{Laporan Harian Pekan ke-1}
+\subsection{Laporan Harian ke-1}
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 12 Maret 2019}
@@ -19,7 +19,7 @@
 \end{tabular}
 \end{table}
 
-\subsection{Laporan Harian Pekan ke-2}
+\subsection{Laporan Harian ke-2}
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 13 Maret 2019}
@@ -38,7 +38,7 @@
 \end{table}
 
 
-\subsection{Laporan Harian Pekan ke-3}
+\subsection{Laporan Harian ke-3}
 
 \begin{table}[htp]
 \caption{Laporan Harian Tanggal 14 Maret 2019}
@@ -53,6 +53,25 @@
 3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
 4 & Disiplin & Jam Datang : 09:00 WIB \\
    &  & Jam Pulang : 16.15 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
+
+\subsection{Laporan Harian ke-4}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 15 Maret 2019}
+\label{tab:lh150319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project Jaringan saraf convolutional canggih pada udemy \\
+   & & b.Mempelajari materi Udemy \\ \hline
+   & & c.Toefel \\ \hline
+3 & Integritas & bukuInformatika/DeepLearningComputerVision \\ \hline
+4 & Disiplin & Jam Datang : 09:00 WIB \\
+   &  & Jam Pulang : 15.10 WIB \\ \hline
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
 \end{tabular}
 \end{table}
