menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -706,7 +706,60 @@
 \item Membersihkan area belakang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 15/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#32
+\item Menambah template latex dan materi chapter 1 - 2 \#1
+\item Memerge dan memeriksa github agar tidak konflik pada tugas Mata Kuliah kecerdasan buatan chapter 3 bagian 1 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Memerge dan memeriksa github agar tidak konflik pada tugas Mata Kuliah kecerdasan buatan chapter 3 bagian 2 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064(konflik dan ngepull tugas lebih dari jam 04.00))
+\item Menyimak materi mengenai TOEFL dari youtube
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
 \end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#32
+\item Menambah template latex dan materi chapter 1 - 2 \#1
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#32
+\item Menambah template latex dan materi chapter 1 - 2 \#1
+\item Memerge dan memeriksa github agar tidak konflik pada tugas Mata Kuliah kecerdasan buatan chapter 3 bagian 1 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Memerge dan memeriksa github agar tidak konflik pada tugas Mata Kuliah kecerdasan buatan chapter 3 bagian 2 kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064(konflik dan ngepull tugas lebih dari jam 04.00))
+\item Menyimak materi mengenai TOEFL dari youtube
+\item Menyapu area sidang IRC
+\item Membersihkan meja pribadi dan area belakang IRC
+\item Merapihkan kursi setelah jam pulang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.35
+\item Jam Keluar : 16.40
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Mencuci gelas
+\end{enumerate}
+\end{enumerate}
+
 
 \section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
 Total score mingguan adalah 15, keterangan seperti pada Tabel \ref{table:scoremingguan}.
