update tugas harian

--- a/section/chapter7.tex
+++ b/section/chapter7.tex
@@ -63,3 +63,20 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\subsection{Laporan Harian Pekan ke-2}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 18 Maret 2019}
+\label{tab:lh180319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#12  \\ \hline
+2 & Produktifitas & mengupdate buku informatika, belajar install windows \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
