--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -63,3 +63,18 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 18 Maret 2019}
+\label{tab:lh180319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & -  DeepLearningComputerVision \\ \hline
+2 & Produktifitas & belajar udemy \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 08.55 WIB \\
+ &  & Jam Pulang : 15.30 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
